--- a/automations.yaml
+++ b/automations.yaml
@@ -1161,7 +1161,7 @@
         data:
           message: Low battery alert for {{sensors}}
 - id: '1609885331052'
-  alias: Turn off boys' light at bedtime
+  alias: 'Lights: Turn off boys'' light at bedtime'
   description: ''
   trigger:
   - platform: time
@@ -1172,6 +1172,7 @@
     data:
       entity_id:
       - light.seb_s_colour
+      - light.sebs_lamp
       - light.reuben_ceiling
       - light.rname
   mode: single
