--- a/groups.yaml
+++ b/groups.yaml
@@ -17,13 +17,16 @@ all_my_lights:
     - light.reuben
     - light.bloom
     - light.seb_s_colour
+    - light.sebs_lamp
     - light.second_bedroom_light
+    - light.desk
     
 room_seb:
   name: 'Seb''s bedroom'
   entities:
     - light.seb_s_colour
     - switch.sonoff_1000d4baef_1
+    - light.sebs_lamp
 
 room_bed2:
   name: 'Second bedroom'
