Added: Expose input_boolean.do_not_disturb to Google Assistant

--- a/includes/google_assistant.yaml
+++ b/includes/google_assistant.yaml
@@ -78,4 +78,6 @@ entity_config:
         - Christmas tree
         - Tree
       expose: true
+    input_boolean.do_not_disturb:
+      expose: true
 
