--- a/esphome/tagreader.yaml
+++ b/esphome/tagreader.yaml
@@ -5,6 +5,12 @@ wifi:
       password: !secret wifi_password
     - ssid: !secret wifi_ssid
       password: !secret wifi_password
+  domain: ".lan"
+  
+  manual_ip:
+    static_ip: 192.168.1.110
+    gateway: 192.168.1.254
+    subnet: 255.255.255.0
 
   ap:
     ssid: ${devicename}
