--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -77,6 +77,10 @@
   feed_url: https://rss.hosting.thisisdax.com/99ebc61a-7b26-4f76-b595-9e2020ad84ac
 - platform: feedparser
   scan_interval: 43200
+  name: podcast_peace_out
+  feed_url: https://bedtime.fm/peaceout/feed
+- platform: feedparser
+  scan_interval: 43200
   name: QOTD
   feed_url: http://feeds.feedburner.com/theysaidso/qod/inspire
 - platform: feedparser
